fixing the weird overflow

--- a/style.scss
+++ b/style.scss
@@ -400,6 +400,7 @@ body {
     background-color: #FAFAFA;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+    overflow-x: hidden;
 }
 
 a {
